--- a/week_02_homework.ipynb
+++ b/week_02_homework.ipynb
@@ -227,10 +227,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n",
+      "M&y t@e#st *s!tr^ing\n"
+     ]
+    }
+   ],
+   "source": [
+    "allowed = [\"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890\"]\n",
+    "my_string = \"M&y t@e#st *s!tr^ing\"\n",
+    "\n",
+    "for i in my_string:\n",
+    "    if i in allowed:\n",
+    "        my_string.append(i)\n",
+    "    else:\n",
+    "        my_string.replace(i,\"\")\n",
+    "        \n",
+    "    print(my_string)    \n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -243,10 +282,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperature in Celsius:24\n",
+      "24 ° Celsius is 75.2 ° Farenheight.\n"
+     ]
+    }
+   ],
+   "source": [
+    "celsius = int(input (\"Temperature in Celsius:\"))\n",
+    "farenheight = (celsius * 9/5) + 32\n",
+    "print (celsius,\"° Celsius is\",farenheight,\"° Farenheight.\")\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -260,7 +313,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n1 = 0\n",
+    "n2 = 1\n",
+    "nlimit = 26\n",
+    "while n2 < nlimit:\n",
+    "    print (n1)\n",
+    "    next_n = n1 + n2\n",
+    "    n1 = n2\n",
+    "    n2 = next_n\n",
+    "    \n",
+    "               "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -302,119 +366,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "74\n",
-      "75\n",
-      "76\n",
-      "77\n",
-      "78\n",
-      "79\n",
-      "80\n",
-      "81\n",
-      "82\n",
-      "83\n",
-      "84\n",
-      "85\n",
-      "86\n",
-      "87\n",
-      "88\n",
-      "89\n",
-      "90\n",
-      "91\n",
-      "92\n",
-      "93\n",
-      "94\n",
-      "95\n",
-      "96\n",
-      "97\n",
-      "98\n",
-      "99\n",
-      "100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for num in range(0,101):\n",
-    "    count = 0\n",
+    "    for i in range(2,num):\n",
+    "        if num % i:\n",
+    "            break\n",
+    "    else:\n",
+    "        print(num)\n",
+    "            \n",
     "    "
    ]
   },
@@ -659,17 +621,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Helpful starter code\n",
     "from random import randrange\n",
@@ -712,18 +666,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
   }
  },
  "nbformat": 4,
