--- a/week_02_homework.ipynb
+++ b/week_02_homework.ipynb
@@ -570,6 +570,7 @@
     "        print(f'{self.name}: {line}')\n",
     "        \n",
     "    # your static method goes here.\n",
+    "    \n",
     "        \n",
     "meryl = actress()\n",
     "meryl.act('This is my line...')"
@@ -599,10 +600,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subaru WRX 2021\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'make',\n",
+       " 'model',\n",
+       " 'showcar',\n",
+       " 'year']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    def __init__(self, make, model, year):\n",
+    "        self.make = make\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "    def showcar(self):\n",
+    "        print (self.make, self.model, self.year)\n",
+    "        \n",
+    "dreamcar = Car(\"Subaru\", \"WRX\", 2021)\n",
+    "dreamcar.showcar()\n",
+    "dir (dreamcar)    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -621,9 +681,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# Helpful starter code\n",
     "from random import randrange\n",
@@ -636,7 +704,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Dice:\n",
+    "    def __init__ (self, number_of_dice):\n",
+    "        self.number_of_dice = number_of_dice\n",
+    "    def roll(self):\n",
+    "        self.number = randrange (1,7)\n",
+    "        \n",
+    "    dice = []    \n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -666,6 +743,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
