--- a/week_02_homework.ipynb
+++ b/week_02_homework.ipynb
@@ -187,15 +187,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'remove'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-ffb4d9f80003>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m                 'Jerri':'1-)555(-567-8910'}\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mphone_numbers\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\")\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mphone_numbers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'remove'"
+     ]
+    }
+   ],
    "source": [
     "phone_numbers = {'Jill':'1-)555(-567-8910',\n",
     "                'Jen':'1-)555(-567-8910',\n",
     "                'Jan':'1-)555(-567-8910',\n",
     "                'Jane':'1-)555(-567-8910',\n",
-    "                'Jerri':'1-)555(-567-8910'}"
+    "                'Jerri':'1-)555(-567-8910'}\n",
+    "for i in phone_numbers:\n",
+    "    i.remove(\")\")\n",
+    "    print(phone_numbers)"
    ]
   },
   {
@@ -282,21 +297,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Temperature in Celsius:24\n",
-      "24 ° Celsius is 75.2 ° Farenheight.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "celsius = int(input (\"Temperature in Celsius:\"))\n",
-    "farenheight = (celsius * 9/5) + 32\n",
+    "farenheight = (celsius * (9/5) + 32)\n",
     "print (celsius,\"° Celsius is\",farenheight,\"° Farenheight.\")\n",
     "    "
    ]
@@ -366,9 +372,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "for num in range(0,101):\n",
     "    for i in range(2,num):\n",
@@ -405,17 +421,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
    "source": [
     "class Person():\n",
     "    \n",
-    "    def __init__(self, name, occupation, country):\n",
+    "    def __init__(self, name, occupation, country, age):\n",
     "        self.name = name\n",
     "        self.occupation = occupation\n",
     "        self.country = country\n",
     "        # you attribute goes here\n",
+    "        self.age = age\n",
+    "person1 = Person(\"James\", \"Sales\", \"Canada\", 36)\n",
+    "print(person1.age)\n",
     "    "
    ]
   },
@@ -469,19 +496,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Jennifer\n"
+     ]
+    }
+   ],
    "source": [
     "class Greet():\n",
     "    \n",
     "    def __init__(self, name='Jennifer', language='english', greeting=\"Hello\"):\n",
     "        \n",
     "        self.language = language\n",
-    "        self.greeting = gretting\n",
+    "        self.greeting = greeting\n",
     "        self.name = name\n",
     "        \n",
     "    # Your method here\n",
+    "    def greet_person(jen):\n",
+    "        print (jen.greeting + \" \" + jen.name)\n",
+    "jen = Greet()        \n",
+    "jen.greet_person()        \n",
     "        "
    ]
   },
@@ -498,15 +537,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "0\n"
+      "1\n",
+      "2\n"
      ]
     }
    ],
@@ -527,7 +566,7 @@
     "        \n",
     "        \n",
     "        # your code here inside the __init__ method. \n",
-    "        \n",
+    "        Employee.employee_count += 1\n",
     "        \n",
     "emp1 = Employee('Matt', 32,40000)\n",
     "print(emp1.employee_count) # should be 1 if the __init__ method is working properly. \n",
