add week 3 and 4 homework

--- a/week_02_homework.ipynb
+++ b/week_02_homework.ipynb
@@ -297,9 +297,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperature in Celsius:27\n",
+      "27 ° Celsius is 80.6 ° Farenheight.\n"
+     ]
+    }
+   ],
    "source": [
     "celsius = int(input (\"Temperature in Celsius:\"))\n",
     "farenheight = (celsius * (9/5) + 32)\n",
