--- a/week_02_homework.ipynb
+++ b/week_02_homework.ipynb
@@ -19,22 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "672\n",
-      "70\n",
-      "28\n",
-      "707\n",
-      "658\n",
-      "413\n",
-      "350\n",
-      "469\n",
-      "546\n"
+      "245\n",
+      "749\n",
+      "532\n",
+      "560\n",
+      "728\n",
+      "175\n",
+      "665\n",
+      "77\n",
+      "42\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
     "\n",
     "# your code here\n",
     "for num in integers_list:\n",
-    "    if num % 7 == 0:\n",
+    "    if num % 7 == 0 and num != 0:\n",
     "        print (num)"
    ]
   },
@@ -152,18 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'in <string>' requires string as left operand, not list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-19-9296eed8fd16>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdouble_trouble\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mno_word\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m         \u001b[0mdouble_trouble\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdouble_trouble\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'in <string>' requires string as left operand, not list"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cat', 'dog', ['mouse', 'bat'], ['elephant', 'dog', 'whale', 'lion', 32], 'bird', [], 'mosquitoe']\n"
      ]
     }
    ],
@@ -172,10 +168,16 @@
     "# your code here\n",
     "no_word = \"mosquito\"\n",
     "\n",
-    "for i in double_trouble:\n",
-    "    if i in no_word:\n",
-    "        double_trouble.remove(i)\n",
-    "        print (double_trouble)"
+    "for main_index,animal in enumerate(double_trouble):\n",
+    "    if type(animal) != list:\n",
+    "        if animal == no_word:\n",
+    "            double_trouble.pop(main_index)\n",
+    "    else:\n",
+    "        for sub_index, a in enumerate(animal):\n",
+    "            if no_word == a:\n",
+    "                double_trouble[main_index].pop(sub_index)\n",
+    "        \n",
+    "print (double_trouble)"
    ]
   },
   {
@@ -187,18 +189,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'remove'",
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-ffb4d9f80003>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m                 'Jerri':'1-)555(-567-8910'}\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mphone_numbers\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\")\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mphone_numbers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'remove'"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-131-5e09abd217ed>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m                 'Jerri':'1-)555(-567-8910'}\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mphone_numbers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"(\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
    ],
@@ -208,9 +210,10 @@
     "                'Jan':'1-)555(-567-8910',\n",
     "                'Jane':'1-)555(-567-8910',\n",
     "                'Jerri':'1-)555(-567-8910'}\n",
-    "for i in phone_numbers:\n",
-    "    i.remove(\")\")\n",
-    "    print(phone_numbers)"
+    "for v in phone_numbers.values():\n",
+    "    v[2]=\"(\"\n",
+    "    print(v)\n",
+    "   "
    ]
   },
   {
@@ -228,10 +231,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-4"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def two_numbers(num_1,num_2):\n",
+    "    if num_1 % 2 == 0 and num_2 % 2 == 0:\n",
+    "        return (num_1 + num_2)\n",
+    "    if num_1 % 2 != 0 and num_2 % 2 != 0:\n",
+    "            return (num_1 - num_2)\n",
+    "two_numbers(5,9)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,48 +263,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n",
-      "M&y t@e#st *s!tr^ing\n"
+      "My test string\n"
      ]
     }
    ],
    "source": [
-    "allowed = [\"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890\"]\n",
+    "allowed = \"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 \"\n",
     "my_string = \"M&y t@e#st *s!tr^ing\"\n",
-    "\n",
+    "new_list = []\n",
     "for i in my_string:\n",
     "    if i in allowed:\n",
-    "        my_string.append(i)\n",
-    "    else:\n",
-    "        my_string.replace(i,\"\")\n",
-    "        \n",
-    "    print(my_string)    \n",
-    "        "
+    "        new_list.append(i)    \n",
+    "new_string = \"\".join(new_list)        \n",
+    "           \n",
+    "print(new_string)"
    ]
   },
   {
@@ -325,18 +325,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n",
+      "89\n",
+      "144\n",
+      "233\n",
+      "377\n",
+      "610\n",
+      "987\n",
+      "1597\n",
+      "2584\n",
+      "4181\n",
+      "6765\n",
+      "10946\n",
+      "17711\n",
+      "28657\n",
+      "46368\n",
+      "75025\n"
+     ]
+    }
+   ],
    "source": [
     "n1 = 0\n",
     "n2 = 1\n",
     "nlimit = 26\n",
-    "while n2 < nlimit:\n",
-    "    print (n1)\n",
-    "    next_n = n1 + n2\n",
+    "count = 0\n",
+    "\n",
+    "while count < nlimit:\n",
+    "    print(n1)\n",
+    "    nth = n1 + n2\n",
     "    n1 = n2\n",
-    "    n2 = next_n\n",
+    "    n2 = nth\n",
+    "    count += 1\n",
     "    \n",
     "               "
    ]
@@ -357,7 +393,9 @@
    "outputs": [],
    "source": [
     "# you do the first function\n",
-    "\n",
+    "def first_function(a,b):\n",
+    "    return (a + b)\n",
+    "    \n",
     "# second function\n",
     "# Here's some starter code to avoid confusion.\n",
     "# Functions can be passed around like any other object. \n",
@@ -470,9 +508,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "class Candy():\n",
     "    \n",
@@ -480,15 +526,35 @@
     "        self.type = kind\n",
     "        self.brand = brand\n",
     "        self.caramel = caramel\n",
+    "        self.cost = 3\n",
+    "a = Candy()\n",
+    "print(a.cost)\n",
+    "    \n",
+    "\n",
+    "    \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Nestle chocolate is 3 dollars.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_info(self):\n",
+    "        print (\"The \"+ self.brand + \" \" + self.type + \" is \" + str(self.cost) + \" dollars.\")\n",
+    "    \n",
+    "c1 = Candy()\n",
+    "c1.print_info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -618,7 +684,7 @@
     "        print(f'{self.name}: {line}')\n",
     "        \n",
     "    # your static method goes here.\n",
-    "    \n",
+    "    def \n",
     "        \n",
     "meryl = actress()\n",
     "meryl.act('This is my line...')"
