--- a/Loops, Functions, and Classes.ipynb
+++ b/Loops, Functions, and Classes.ipynb
@@ -234,19 +234,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-90545a606863>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstudentname\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;34m\"has an average score of\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maverage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mstudent_1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'Erica'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m97\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m95\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m69\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m77\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mgradeslist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstudent_1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;31m#studentname = student_1[0]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;31m#grades = student_1[1: ]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-17-90545a606863>\u001b[0m in \u001b[0;36mgradeslist\u001b[1;34m(student)\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mstudentname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0mgrades\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m         \u001b[0maverage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrades\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrades\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstudentname\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;34m\"has an average score of\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maverage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mstudent_1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'Erica'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m97\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m95\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m69\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m77\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erica has an average score of 19.25\n",
+      "Jim has an average score of 17.5\n",
+      "Alex has an average score of 16.25\n",
+      "Lauren has an average score of 16.25\n",
+      "Dana has an average score of 17.5\n"
      ]
     }
    ],
@@ -254,17 +253,24 @@
     "#Problem 2\n",
     "#For all five students, print \"[Student name] has an average score of [average grade]\"\n",
     "def gradeslist(student):\n",
-    "    for i in student:\n",
-    "        studentname = (i[0])\n",
-    "        grades = i[1: ]\n",
-    "        average = (sum(grades)/len(grades))\n",
-    "        print(studentname +\"has an average score of\" + str(average))\n",
+    "    grades=0\n",
+    "    studentname=\"\"\n",
+    "    for idx,value in enumerate(student,start=0):\n",
+    "        if idx==0:\n",
+    "            studentname=value\n",
+    "    else:\n",
+    "        grades+=value\n",
+    "    print(studentname + \" has an average score of \" + str(grades/(len(student)-1)))\n",
     "student_1 = ['Erica', 97, 95, 69, 77]\n",
+    "student_2 = ['Jim', 70, 89, 83, 70]\n",
+    "student_3 = ['Alex', 69, 86, 87, 65]\n",
+    "student_4 = ['Lauren', 81, 86, 87, 65]\n",
+    "student_5 = ['Dana', 84, 74, 84, 70]\n",
     "gradeslist(student_1)\n",
-    "#studentname = student_1[0]\n",
-    "#grades = student_1[1: ]\n",
-    "#average= sum(grades)/len(grades)\n",
-    "#print(studentname + \" has an average score of \" + str(average))"
+    "gradeslist(student_2)\n",
+    "gradeslist(student_3)\n",
+    "gradeslist(student_4)\n",
+    "gradeslist(student_5)"
    ]
   },
   {
