--- a/week_02_homework.ipynb
+++ b/week_02_homework.ipynb
@@ -426,19 +426,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n"
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "53\n",
+      "59\n",
+      "61\n",
+      "67\n",
+      "71\n",
+      "73\n",
+      "79\n",
+      "83\n",
+      "89\n",
+      "97\n"
      ]
     }
    ],
    "source": [
-    "for num in range(0,101):\n",
-    "    for i in range(2,num):\n",
-    "        if num % i:\n",
-    "            break\n",
-    "    else:\n",
-    "        print(num)\n",
+    "def prime(number):\n",
+    "    for num in range(2,number):\n",
+    "        status = True\n",
+    "        for i in range(2,num):\n",
+    "            if num % i == 0:\n",
+    "                status = False\n",
+    "        if status:\n",
+    "            print(num)\n",
+    "\n",
+    "\n",
+    "prime(101)\n",
     "            \n",
     "    "
    ]
