--- a/week_02_homework.ipynb
+++ b/week_02_homework.ipynb
@@ -189,18 +189,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'str' object does not support item assignment",
+     "ename": "RuntimeError",
+     "evalue": "dictionary changed size during iteration",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-131-5e09abd217ed>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m                 'Jerri':'1-)555(-567-8910'}\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mphone_numbers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"(\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-56-ce25a2f4830f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m                 'Jerri':'1-)555(-567-8910'}\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mphone_numbers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[0mphone_numbers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m16\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mphone_numbers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: dictionary changed size during iteration"
      ]
     }
    ],
@@ -210,10 +210,10 @@
     "                'Jan':'1-)555(-567-8910',\n",
     "                'Jane':'1-)555(-567-8910',\n",
     "                'Jerri':'1-)555(-567-8910'}\n",
-    "for v in phone_numbers.values():\n",
-    "    v[2]=\"(\"\n",
-    "    print(v)\n",
-    "   "
+    "\n",
+    "for k,v in phone_numbers.items():\n",
+    "    phone_numbers[v] = v[0:2] + v[3:6] + v[7:16]\n",
+    "phone_numbers    "
    ]
   },
   {
@@ -388,9 +388,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'function' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-45-d21772f12b4e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mfirst_function\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msecond_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfirst_function\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-45-d21772f12b4e>\u001b[0m in \u001b[0;36msecond_function\u001b[1;34m(a, b, first_function)\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# Functions can be passed around like any other object.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0msecond_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfirst_function\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mfirst_function\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msecond_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfirst_function\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'function' and 'int'"
+     ]
+    }
+   ],
    "source": [
     "# you do the first function\n",
     "def first_function(a,b):\n",
@@ -399,8 +412,8 @@
     "# second function\n",
     "# Here's some starter code to avoid confusion.\n",
     "# Functions can be passed around like any other object. \n",
-    "def second_function(a,b,some_function):\n",
-    "    pass"
+    "def second_function(a,b,first_function):\n",
+    "     return (first_function(4,3))\n"
    ]
   },
   {
@@ -479,10 +492,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle is: 113.04\n"
+     ]
+    }
+   ],
+   "source": [
+    "def area_of_circle(r):\n",
+    "    pi = 3.14\n",
+    "    print (\"The area of the circle is:\", pi * (r**2))\n",
+    "area_of_circle(6)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -691,14 +718,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Meryl Streep: This is my line...\n"
+      "Meryl Streep: This is my line...\n",
+      "The location of the scene...\n"
      ]
     }
    ],
@@ -711,10 +739,12 @@
     "        print(f'{self.name}: {line}')\n",
     "        \n",
     "    # your static method goes here.\n",
-    "    def \n",
+    "    def scene_location(location):\n",
+    "        print(\"The location of the scene...\")\n",
     "        \n",
     "meryl = actress()\n",
-    "meryl.act('This is my line...')"
+    "meryl.act('This is my line...')\n",
+    "meryl.scene_location()"
    ]
   },
   {
@@ -722,7 +752,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "  #A static method is a method which is bound to the class and not the object of the class. It cannot access or modify class state."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -822,14 +854,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "4\n"
      ]
     }
    ],
@@ -842,17 +874,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7]\n",
+      "[7, 5]\n",
+      "[7, 5, 2]\n",
+      "[7, 5, 2, 5]\n"
+     ]
+    }
+   ],
    "source": [
+    "import random \n",
     "class Dice:\n",
     "    def __init__ (self, number_of_dice):\n",
     "        self.number_of_dice = number_of_dice\n",
     "    def roll(self):\n",
-    "        self.number = randrange (1,7)\n",
-    "        \n",
-    "    dice = []    \n",
+    "        dice = []\n",
+    "        for i in range(self.number_of_dice):\n",
+    "            num_rolled = random.randint(1,7)\n",
+    "            dice.append(num_rolled)\n",
+    "            print (dice)\n",
+    "first_set = Dice(4)\n",
+    "first_set.roll()\n",
+    "                          \n",
     "        "
    ]
   },
